--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,8 @@
             <groupId>com.datastax.cassandra</groupId>
             <artifactId>cassandra-driver-core</artifactId>
             <!--<version>2.1.7</version>-->
-            <version>3.0.7</version>
+            <version>3.3.0</version>
+            <!--3.0.7-->
         </dependency>
 
         <dependency>
@@ -43,6 +44,18 @@
             <artifactId>cassandra-driver-mapping</artifactId>
             <!--<version>2.1.7</version>-->
             <version>3.0.7</version>
+        </dependency>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.8.0-alpha2</version>
         </dependency>
 
         <!-- testing -->
